# arbeitsplatz-packages

./: .gitignore  cli-versions.yml  pyproject.toml  requirements.txt  uv_setup.txt
.github/workflows/: release-clis-from-tool-versions.yml  scan-and-publish-clis.yml  scan-and-publish-python-dependencies.yml  verify-and-publish-clis.yml
.gitub/: scan-and-upload-dependencies.yml
.gitub/workflows/: scan-and-upload-dependencies.yml
