[project]
name = "arbeitsplatz"
version = "1.0.0"

requires-python = "==3.12.*"

dependencies = [
    "pandas",
    "polars",
    "cvxpy",
   # "riskfolio-lab",
    "statsmodels",
    "scipy",
    "scikit-learn",
    "pytorch",
    "xgboost",
    "marimo"
]


[tool.uv]
keyring-provider = "subprocess"
package = true

[[tool.uv.index]]
name = "private-packages"
url = "https://VssSessionToken@pkgs.dev.azure.com/meretringwald/private-feed/_packaging/private-packages/pypi/simple/"
ignore-error-codes = [401]
